better full screen canva

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
           <a href="blog/about">About</a>
         </nav>
       </header>
+
+      <div id="title">Deep dive into Fourier Transform and epicycles</div>
     </div>
   </div>
 
