--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <title>Template</title>
 
+  <meta name="viewport" content="width=device-width initial-scale=1"/>
+
   <link rel="stylesheet" type="text/css" href="style.css" />
   <link rel="stylesheet" type="text/css" href="article.css">
 </head>
