header scroll effect

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="article.css">
 </head>
 
-<body>
+<body onload="headerScroll">
   <div id="hero" style="--background: url('https://wallpapercave.com/wp/PO6cjaY.jpg')">
     <div id="container">
       <header>
@@ -50,6 +50,7 @@
   </div>
 
   <script src="full-screen.js" charset="utf-8"></script>
+  <script src="header-scroll.js" charset="utf-8"></script>
 </body>
 
 </html>
