mdlbrot, blur, progressive dark

--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
 </head>
 
 <body onload="headerScroll">
-  <div id="hero" style="--background: url('https://wallpapercave.com/wp/PO6cjaY.jpg')">
+  <div id="hero" style="--background: url('https://cdn.futura-sciences.com/buildsv6/images/largeoriginal/d/5/3/d53a89351b_50036006_mandelbrot-ensemble-wikipedia-commons.jpg')">
     <div id="container">
       <header>
-        <div class="site-avatar">
-          <img src="logo.svg" alt="logo">
-        </div>
-        <div class="site-info">
-          <h1 class="site-name"><a href="/">Animated Maths</a></h1>
-          <p class="site-description">Let's learn maths the other way</p>
+        <div class="site-left">
+          <div class="site-avatar">
+            <img src="logo.svg" alt="logo">
+          </div>
+          <div class="site-info">
+            <h1 class="site-name"><a href="/">Animated Maths</a></h1>
+            <p class="site-description">Let's learn maths the other way</p>
+          </div>
         </div>
 
         <nav>
@@ -28,7 +30,7 @@
         </nav>
       </header>
 
-      <div id="title">Deep dive into Fourier Transform and epicycles</div>
+      <div id="title">The most famous fractale : Mandelbrot set</div>
     </div>
   </div>
 
