--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </div>
 
         <nav>
-          <a href="blog/">Blog</a>
-          <a href="blog/about">About</a>
+          <a href="/blog/">Blog</a>
+          <a href="/blog/about">About</a>
         </nav>
       </header>
 
